--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/028df712be111493da4fc09258319e01.data",
-        frameworkUrl: "Build/c27ce6ff8d3d98d3807191a10db37c0e.framework.js",
-        codeUrl: "Build/8f4ee46ca34abee4ac55ecf1d4471b32.wasm",
+        dataUrl: "Build/6f8e2200e80b66a9aee1a10a6142ae3d.data.br",
+        frameworkUrl: "Build/c27ce6ff8d3d98d3807191a10db37c0e.framework.js.br",
+        codeUrl: "Build/8f4ee46ca34abee4ac55ecf1d4471b32.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Vegas Slot",
